mdAPIZip/unpackaged/objects/Buyer__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Buyer</label>
    <nameField>
        <label>Buyer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>